# parallel_computing

./: README.md  metric.md  pyproject.toml  requirements.txt
src/: main.py  matrix.py  plotter.py
